--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,16 @@
 spring:
   application:
-      name: integration-hubspot
+    name: integration-hubspot
 
 server:
   port: 8081
 
 hubspot:
-  clientId: 30e9b039-47ce-44ce-bc73-62a35627a0b7
-  clientSecret: 6ff4a785-d242-44cf-8c95-44cf345e6b08
-  scopes: crm.objects.contacts.read%20crm.objects.contacts.write%20crm.schemas.contacts.write
-  url: https://app.hubspot.com/oauth/authorize
-  redirectUri: http://localhost:8081/v1/oauth-callback
+  clientId: ${clientId}
+  clientSecret: ${clientSecret}
+  scopes: ${scopes}
+  url: ${url-auth}
+  redirectUri: ${redirect-url}
 
 hub-api:
-  base-url: https://api.hubapi.com
+  base-url: ${url-hubapi}
